[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["linux"]
linux = []
windows = []
mac = []

[dependencies]
itertools = { version = "0.7.0", features = [] }
rayon = { version = "1", features = [] }
libc = "0.2.151"
input = "0.8.3"
x11 = "2.21.0"
evdev = "0.12.1"
evdev-rs = { version = "0.6.1", features = ["serde", "libevdev-1-10"] }
env_logger = "0.10.1"
enigo = "0.1.3"
serde = "1.0.195"
ssh2 = "0.9.4"
ring = "0.17.7"
